# icu-cmake

./: .gitignore  CMakeLists.txt  ICU-config.cmake.in  README.md
.github/workflows/: cmake.yml
cmake/: utils.cmake
